name:                HsWiki
version:             0.1.0.0
-- synopsis:
-- description:      Simple Wiki in the spirit of the legendary C2-Wiki - written in haskell with yesod.
homepage:            https://github.com/thma/HsWiki#readme
license:             BSD3
author:              Thomas Mahler
maintainer:          thma@apache.org
copyright:           2018 Thomas Mahler
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable HsWiki
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , markdown
                     , blaze-html
                     , yesod
                     , text
                     , directory
                     , cmdargs

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/thma/HsWiki.git
